update mentions of Twepi to QUAC (closes #21)

--- a/misc/default.cfg
+++ b/misc/default.cfg
@@ -1,5 +1,5 @@
-# Default configuration for Twepi stuff. (In case it's not obvious, don't
-# start editing this file to add your configuration.)
+# Default configuration for QUAC stuff. (In case it's not obvious, don't start
+# editing this file to add your configuration.)
 #
 # ALL paths in this file are relative to the directory containing the
 # configuration file specified on the command line (NOT the config file
