--- a/misc/default.cfg
+++ b/misc/default.cfg
@@ -7,6 +7,9 @@
 #
 # Importantly, that means no paths can be set in default.cfg, because there
 # might be no --config option.
+#
+# Copyright (c) 2012-2013 Los Alamos National Security, LLC, and others.
+
 
 [path]
 ### Various paths.
