--- a/misc/default.cfg
+++ b/misc/default.cfg
@@ -108,3 +108,54 @@ apikey =
 
 # See Topsy API docs...
 count_method = citation
+
+
+[wkpd]
+### Wikipedia-related
+
+# Location of Wikipedia access log collection.
+access_log_dir =
+
+# Location of XML dumps
+dump_dir =
+
+# Bandwidth limit (KBytes per second). The default is deliberately low so that
+# one has to take specific action to be more aggressive. Note that *each*
+# download process will consume this much bandwidth (unless someone else is
+# capping it).
+bandwidth_limit = 256
+
+# Which projects to fetch dumps for? The default is two small Wikipedias
+# (Maori and Manx Gaelic) to get you started. It is recommended you get things
+# working with these, and then scale up to the much larger wikis that you
+# probably want.
+projects = miwiki
+           gvwiki
+
+# Which XML dumps to fetch? See <http://dumps.wikimedia.org/enwiki/20130503/>
+# for examples of what is available. This a glob pattern matching the
+# filenames you want; the project and date prefix (or a subpattern matching
+# this) will be prepeded. For example, if the project is "enwiki",
+# "pages-meta-history*.7z" will be translated to
+# "enwiki-latest-pages-meta-history*.7z" and will download the "all pages with
+# complete edit history" files in 7zip format.
+#
+# WARNING: Writing these patterns takes some finesse. In particular:
+#
+# * Watch out for over-broad patterns that download more than you want. For
+#   example, "pages-meta-history*" for enwiki will download the complete edit
+#   history files in both 7zip and the much larger bzip2.
+#
+# * Each pattern is applied identically to each project. This can have
+#   surprising effects because some files are split in large wikis but unsplit
+#   in small wikis.
+#
+#   For example, "stub-meta-history*.xml.gz" will get you the split revision
+#   metadata files in enwiki, but nothing in miwki, because that file is not
+#   split for that Wikipedia. However, enwiki also has an unsplit version, so
+#   you can use "stub-meta-history.xml.gz" and it will work for both.
+#
+#   On the other hand, for complete edit history, enwiki has only the split
+#   version and miwiki has only the unsplit version, so for this file you can
+#   use a pattern that matches both.
+dumps = stub-meta-history.xml.gz
