--- a/misc/default.cfg
+++ b/misc/default.cfg
@@ -113,11 +113,17 @@ count_method = citation
 [wkpd]
 ### Wikipedia-related
 
-# Location of Wikipedia access log collection.
+# Local path to Wikipedia access log collection.
 access_log_dir =
 
-# Location of XML dumps
+# URL of access log mirror
+access_log_url = rsync://wikimedia.wansec.com/wikimedia/other/pagecounts-raw/
+
+# Local path to XML dumps
 dump_dir =
+
+# URL of XML dump mirror
+dump_url = rsync://ftpmirror.your.org/wikimedia-dumps/
 
 # Bandwidth limit (KBytes per second). The default is deliberately low so that
 # one has to take specific action to be more aggressive. Note that *each*
