note about rsync can work like ls

--- a/misc/default.cfg
+++ b/misc/default.cfg
@@ -113,6 +113,9 @@ count_method = citation
 [wkpd]
 ### Wikipedia-related
 
+# Note that rsync with no destination argument works like "ls". This is handy
+# to (a) explore what a mirror has and (b) make sure rsync works.
+
 # Local path to Wikipedia access log collection.
 access_log_dir =
 
