create smaller version of metadata file too

--- a/.gitignore
+++ b/.gitignore
@@ -115,4 +115,4 @@ tests/twitter/tweets/geo
 
 # derived test wikimedia data
 tests/standalone/wp-access/hashed*
-tests/standalone/wp-access/metadata
+tests/standalone/wp-access/metadata*
