--- a/requirements.txt
+++ b/requirements.txt
@@ -4,20 +4,15 @@ Jinja2==2.7.3
 MarkupSafe==0.23
 Pygments==1.6
 Sphinx==1.2.3
-anyjson==0.3.3
-argparse==1.2.1
 docutils==0.12
-httplib2==0.9
 isodate==0.5.0
 ## FIXME: could not find svn URL in dependency_links for this package:
 joblib==0.8.3-r1
 lockfile==0.10.2
 matplotlib==1.4.0
-mock==1.0.1
 nose==1.3.4
 numpy==1.9.0
-oauth2==1.5.211
-psutil==2.1.2
+psutil==2.1.3
 pyparsing==2.0.2
 pyproj==1.9.3
 python-daemon-3K==1.5.8
@@ -27,6 +22,5 @@ pytz==2014.7
 scikit-learn==0.15.2
 scipy==0.14.0
 six==1.8.0
-tinysegmenter==0.1
-wsgiref==0.1.2
+tinysegmenter3==0.0.3
 xlrd==0.9.3
