Update collect to Python 3 and TwitterAPI (instead of tweetstream).
statuses/filter stream not updated.
Config options socket_timeout and source_ip removed.

--- a/misc/default.cfg
+++ b/misc/default.cfg
@@ -52,19 +52,13 @@ tweets_per_file = 500000
 # Log a heartbeat at the DEBUG level at this interval. Must be a power of two
 # (in order to support our simple algorithm for heartbeating more frequently
 # at startup.)
-seconds_per_heartbeat = 256  ; must be a power of two
+seconds_per_heartbeat = 256  # must be a power of two
 
 
 ## Some network parameters.
 
 # If true, do not use a proxy even if the environment suggests one.
 no_proxy = false
-
-# If non-empty, bind to this IP address when connecting to Twitter.
-source_ip =
-
-# Timeout in seconds on the HTTP socket.
-socket_timeout = 10
 
 # Reconnect backoff parameters.
 #
@@ -75,7 +69,7 @@ reconnect_delay_base = 10.0
 reconnect_delay_mult = 2.0
 # ... until we are waiting this long (in seconds), which is the maximum. If we
 # actually reach this, emit a warning each time, but don't stop retrying.
-reconnect_delay_max = 21600  ; 6 hours
+reconnect_delay_max = 21600  # 6 hours
 
 # A connection which stays up this long (in seconds) is assumed to be stable,
 # and we reset the backoff.
@@ -89,8 +83,8 @@ connect_ok_duration = 180
 # bouncing. For a slow failure in which a stable connection can't be achieved
 # and we keep waiting longer and longer, you want the warnings from
 # reconnect_delay_max instead.
-connect_limit = 48              ; average interval of 5 minutes for ...
-connect_limit_interval = 14400  ; 4 hours
+connect_limit = 48              # average interval of 5 minutes for ...
+connect_limit_interval = 14400  # 4 hours
 
 
 [pars]
