--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ Jinja2==2.7.3
 MarkupSafe==0.23
 Pygments==1.6
 Sphinx==1.2.3
+TwitterAPI==2.2.5
 docutils==0.12
 isodate==0.5.0
 ## FIXME: could not find svn URL in dependency_links for this package:
@@ -12,6 +13,7 @@ lockfile==0.10.2
 matplotlib==1.4.0
 nose==1.3.4
 numpy==1.9.0
+oauthlib==0.6.3
 psutil==2.1.3
 pyparsing==2.0.2
 pyproj==1.9.3
@@ -19,6 +21,8 @@ python-daemon-3K==1.5.8
 python-dateutil==2.2
 python-hostlist==1.14
 pytz==2014.7
+requests==2.4.3
+requests-oauthlib==0.4.2
 scikit-learn==0.15.2
 scipy==0.14.0
 six==1.8.0
