h5py sharded wrapper module, various incomple HDF5 support

--- a/misc/default.cfg
+++ b/misc/default.cfg
@@ -162,3 +162,12 @@ projects = miwiki
 #   version and miwiki has only the unsplit version, so for this file you can
 #   use a pattern that matches both.
 dumps = stub-meta-history.xml.gz
+
+# HDF5 files per month of pageview data
+hashmod = 256
+
+# Number of hourly pagecount files read per preprocessing pass. The default is
+# chosen so that a daily update, which often collects a one or two more than
+# 24 hourly files, finishes in 2 passes.
+pagecount_pass_ct = 14
+
