--- a/.gitignore
+++ b/.gitignore
@@ -106,7 +106,7 @@ bin/hashsplit
 *.stdout-diff
 
 # test temporary files
-tests/tmp/tmp*
+tests/tmp/*
 
 # test tweets
 tests/twitter/tweets/raw
@@ -114,6 +114,4 @@ tests/twitter/tweets/pre
 tests/twitter/tweets/geo
 
 # derived test wikimedia data
-tests/standalone/wp-access/hashed*
-tests/standalone/wp-access/metadata*
-tests/standalone/wp-access/missing.tsv
+tests/standalone/wp-access/h5.mk
