write-only and eager pruning strategies

--- a/misc/default.cfg
+++ b/misc/default.cfg
@@ -166,8 +166,7 @@ dumps = stub-meta-history.xml.gz
 # HDF5 files per month of pageview data
 hashmod = 256
 
-# Number of hourly pagecount files read per preprocessing pass. The default is
-# chosen so that a daily update, which often collects a one or two more than
-# 24 hourly files, finishes in 2 passes.
-pagecount_pass_ct = 14
-
+# Articles with fewer than this many hits per month are discarded from HDF5
+# files, though they are not guaranteed to be absent. See wp-h5update for
+# details of the algorithm.
+keep_threshold = 30
