--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,30 @@
-Django==1.7
+Django==1.7.6
 GDAL==1.10.0
 Jinja2==2.7.3
 MarkupSafe==0.23
-Pygments==1.6
+Pygments==2.0.2
 Sphinx==1.2.3
 TwitterAPI==2.2.5
 docutils==0.12
-isodate==0.5.0
-## FIXME: could not find svn URL in dependency_links for this package:
-joblib==0.8.3-r1
+isodate==0.5.1
+joblib==0.8.4
 lockfile==0.10.2
-matplotlib==1.4.0
+matplotlib==1.4.3
 nose==1.3.4
-numpy==1.9.0
-oauthlib==0.6.3
-psutil==2.1.3
-pyparsing==2.0.2
-pyproj==1.9.3
+numpy==1.9.2
+oauthlib==0.7.2
+psutil==2.2.1
+pyparsing==2.0.3
+pyproj==1.9.4
 python-daemon-3K==1.5.8
-python-dateutil==2.2
+python-dateutil==2.4.1
 python-hostlist==1.14
-pytz==2014.7
-requests==2.5.0
+pytz==2014.10
+requests==2.5.3
 requests-oauthlib==0.4.2
 scikit-learn==0.15.2
-scipy==0.14.0
-six==1.8.0
+scipy==0.15.1
+six==1.9.0
 tinysegmenter==0.2
 ujson==1.33
 xlrd==0.9.3
