--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,7 @@ requests-oauthlib==0.4.2
 scikit-learn==0.15.2
 scipy==0.14.0
 six==1.8.0
+sphinx-rtd-theme==0.1.7
 tinysegmenter==0.2
 ujson==1.33
 xlrd==0.9.3
