tinkering to make it work in a Charliecloud VM

--- a/misc/default.cfg
+++ b/misc/default.cfg
@@ -23,6 +23,19 @@ next_config =
 log =
 
 
+[limt]
+### General limits.
+
+# SQLite page cache size (KiB)
+# http://www.sqlite.org/pragma.html#pragma_cache_size
+sqlite_page_cache_kb = 4194304
+
+# SQLite head size soft limit (bytes)
+# http://www.sqlite.org/malloc.html
+# http://www.sqlite.org/c3ref/soft_heap_limit64.html
+sqlite_heap_bytes = 4294967296
+
+
 [coll]
 ### Configuration for the collector.
 
