--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,34 @@
-Django==1.7
-Jinja2==2.7.3
-MarkupSafe==0.23
-Pygments==1.6
-Sphinx==1.2.3
-TwitterAPI==2.2.7
+## The following requirements were added by pip freeze:
+alabaster==0.7.3
+Babel==1.3
+Django==1.7.4
 docutils==0.12
-h5py==2.3.1
-isodate==0.5.0
-## FIXME: could not find svn URL in dependency_links for this package:
-joblib==0.8.3-r1
+isodate==0.5.1
+Jinja2==2.7.3
+joblib==0.8.4
 lockfile==0.10.2
-matplotlib==1.4.0
-nose==1.3.4
-numpy==1.9.0
-oauthlib==0.6.3
-psutil==2.1.3
-pyparsing==2.0.2
-pyproj==1.9.3
+MarkupSafe==0.23
+matplotlib==1.4.3
+nose==1.3.6
+numpy==1.9.2
+oauthlib==0.7.2
+psutil==2.2.1
+Pygments==2.0.2
+pyparsing==2.0.3
+pyproj==1.9.4
 python-daemon-3K==1.5.8
-python-dateutil==2.2
+python-dateutil==2.4.2
 python-hostlist==1.14
-pytz==2014.7
-requests==2.4.3
+pytz==2015.2
+requests==2.6.2
 requests-oauthlib==0.4.2
-scikit-learn==0.15.2
-scipy==0.14.0
-six==1.8.0
+scikit-learn==0.16.1
+scipy==0.15.1
+six==1.9.0
+snowballstemmer==1.2.0
+Sphinx==1.3.1
 sphinx-rtd-theme==0.1.7
 tinysegmenter==0.2
+TwitterAPI==2.2.5
 ujson==1.33
 xlrd==0.9.3
