change default threshold to 60 hits/month

--- a/misc/default.cfg
+++ b/misc/default.cfg
@@ -179,7 +179,7 @@ dumps = stub-meta-history.xml.gz
 # HDF5 files per month of pageview data
 hashmod = 256
 
-# Articles with fewer than this many hits per month are discarded from HDF5
-# files, though they are not guaranteed to be absent. See wp-h5update for
-# details of the algorithm.
-keep_threshold = 30
+# Articles with fewer than this many hits per month are discarded from time
+# series datasets, though they are not guaranteed to be absent. See
+# wp-tsupdate for details of the algorithm.
+keep_threshold = 60
