--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 alabaster==0.7.7
 Babel==2.2.0
+Bottleneck==1.0.0
+cycler==0.9.0
 Django==1.9.1
 docutils==0.12
 isodate==0.5.4
@@ -9,6 +11,7 @@ lockfile==0.12.2
 MarkupSafe==0.23
 matplotlib==1.5.1
 nose==1.3.7
+numexpr==2.5
 numpy==1.10.4
 oauthlib==1.0.3
 pandas==0.17.1
@@ -24,6 +27,7 @@ requests==2.9.1
 requests-oauthlib==0.6.0
 scikit-learn==0.17
 scipy==0.16.1
+six==1.10.0
 snowballstemmer==1.2.1
 Sphinx==1.3.4
 sphinx-rtd-theme==0.1.9
