--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 alabaster==0.7.7
-Babel==2.2.0
+apsw==3.11.0.post1
+Babel==2.3.3
 Bottleneck==1.0.0
-cycler==0.9.0
-Django==1.9.1
+cycler==0.10.0
+Django==1.9.5
 docutils==0.12
+imagesize==0.7.0
 isodate==0.5.4
 Jinja2==2.8
 joblib==0.9.4
@@ -11,27 +13,27 @@ lockfile==0.12.2
 MarkupSafe==0.23
 matplotlib==1.5.1
 nose==1.3.7
-numexpr==2.5
-numpy==1.10.4
+numexpr==2.5.2
+numpy==1.11.0
 oauthlib==1.0.3
-pandas==0.17.1
-psutil==3.4.2
-Pygments==2.1
-pyparsing==2.0.7
+pandas==0.18.0
+psutil==4.1.0
+Pygments==2.1.3
+pyparsing==2.1.1
 pyproj==1.9.5.1
 python-daemon-3K==1.5.8
-python-dateutil==2.4.2
+python-dateutil==2.5.2
 python-hostlist==1.14
-pytz==2015.7
+pytz==2016.3
 requests==2.9.1
-requests-oauthlib==0.6.0
-scikit-learn==0.17
-scipy==0.16.1
+requests-oauthlib==0.6.1
+scikit-learn==0.17.1
+scipy==0.17.0
 six==1.10.0
 snowballstemmer==1.2.1
-Sphinx==1.3.4
+Sphinx==1.4.1
 sphinx-rtd-theme==0.1.9
 tinysegmenter==0.2
-TwitterAPI==2.3.6
+TwitterAPI==2.4.1
 ujson==1.35
 xlrd==0.9.4
